--- a/new.html
+++ b/new.html
@@ -15,22 +15,49 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>SMS Routeur</title>
+    <title>SMS Routeur - Nouvelle campagne</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/loader.css" />
   </head>
 
-  <body>
-    <div class="container">
+  <body class="animate__animated animate__fadeIn">
+    <div
+      id="loader-block"
+      class="h-100 justify-content-center align-items-center mt-3"
+      style="display: none"
+    >
+      <div class="loader"></div>
+    </div>
+    <div
+      id="content-block"
+      class="container animate__animated animate__fadeIn"
+      style="display: none"
+    >
       <div class="d-flex justify-content-between align-items-center mt-3">
-        <span class="fs-1">SMS Routeur</span>
-        <span class="fs-5"
-          >Par
-          <a
-            class="text-decoration-none"
-            href="https://github.com/mendoc"
-            target="_blank"
-            >Dimitri ONGOUA</a
+        <span class="fs-1"
+          ><a class="text-decoration-none text-dark" href="/"
+            >SMS Routeur</a
           ></span
         >
+        <div class="d-flex justify-content- align-items-center">
+          <img
+            id="profile-picture"
+            src="/"
+            alt="Profile picture"
+            class="w-25 img-thumbnail rounded-circle me-1"
+          />
+          <button
+            id="btn-logout"
+            type="button"
+            class="btn btn-link btn-sm fs-6 text-decoration-none text-secondary"
+          >
+            Se déconnecter
+          </button>
+        </div>
       </div>
       <div
         class="d-flex justify-content-between align-items-center flex-column m-auto mt-5 p-3"
@@ -75,7 +102,11 @@
               />
             </div>
             <div class="col-sm mt-3">
-              <button type="button" class="btn btn-primary" id="btn-import-recipients">
+              <button
+                type="button"
+                class="btn btn-primary"
+                id="btn-import-recipients"
+              >
                 Importer des contacts
               </button>
             </div>
@@ -101,6 +132,35 @@
         </form>
       </div>
     </div>
+
+    <script type="module">
+      import { logout, getCurrentUser } from "./assets/js/db.js";
+      import {
+        setLoaderVisibility,
+        setContentVisibility,
+        goToHomePage,
+      } from "./assets/js/utils.js";
+      (() => {
+        setLoaderVisibility(true);
+        getCurrentUser((user) => {
+          const profilePictureEl = document.getElementById("profile-picture");
+          if (user) {
+            profilePictureEl.src = user.photoURL;
+            profilePictureEl.style.display = "inline";
+            setLoaderVisibility(false);
+            setContentVisibility(true);
+          } else {
+            // User is signed out
+            goToHomePage();
+          }
+        });
+        document.getElementById("btn-logout").addEventListener("click", () => {
+          setLoaderVisibility(true);
+          setContentVisibility(false);
+          logout(console.error);
+        });
+      })();
+    </script>
 
     <script src="assets/js/new/db.js" type="module"></script>
     <script src="assets/js/new/new.js" defer></script>
