--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-signin-client_id"
+      content="738073783804-j1f0joc2jopf3t2no5qt7p7dm5jc5uup.apps.googleusercontent.com"
+    />
     <link rel="icon" href="/icon48.png" sizes="48x48" type="image/png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -15,11 +19,25 @@
       crossorigin="anonymous"
     ></script>
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
+    <link rel="stylesheet" href="assets/css/loader.css" />
+  
     <title>SMS Routeur</title>
   </head>
 
-  <body>
-    <div class="container">
+  <body class="animate__animated animate__fadeIn">
+    <div
+      id="loader-block"
+      class="h-100 justify-content-center align-items-center mt-3"
+      style="display: none"
+    >
+      <div class="loader"></div>
+    </div>
+    <div id="content-block" class="container" style="display: none">
       <div class="d-flex justify-content-between align-items-center mt-3">
         <span class="fs-1">SMS Routeur</span>
         <span class="fs-5"
@@ -33,43 +51,62 @@
         >
       </div>
       <div
-        class="d-flex justify-content-between align-items-center flex-column w-50 m-auto mt-5 p-3 text-center"
+        class="d-flex justify-content-between align-items-center flex-column w-50 m-auto mt-5 p-3 text-center animate__animated animate__fadeIn"
       >
         <h1 class="fs-2 mb-5">Lancez des campagnes SMS en tout simplicité</h1>
         <div class="bg-light rounded-3 px-5 pt-3 border shadow-sm">
           <p class="fs-3 pb-3">Veuillez vous authentifier pour continuer</p>
-          <div
-            class="g_id_signin text-center d-flex justify-content-center"
-            data-type="standard"
-          ></div>
-          <p class="mt-4">
-            En continuant, vous agree to Anthropic’s Consumer Terms and Usage
-            Policy, and acknowledge their Privacy Policy.
+          <div class="text-center d-flex justify-content-center">
+            <button id="btn-auth-google" class="btn btn-outline-secondary">
+              Continuer avec Google
+            </button>
+          </div>
+          <p class="mt-4 text-muted">
+            En continuant, vous accepter les
+            <a href="/" class="text-reset">Conditions d'utilisation</a> de SMS
+            Routeur ansi que sa
+            <a href="/" class="text-reset">Politique de confidentialité</a>.
           </p>
         </div>
       </div>
     </div>
-    <div
-      id="g_id_onload"
-      data-client_id="738073783804-1jv29evpi9j7er483mcq8d954rmsa0fs.apps.googleusercontent.com"
-      data-callback="handleCredentialResponse"
-    ></div>
-    <script>
-      function handleCredentialResponse(response) {
-        console.log("Response :", response);
-        location.href = "/new.html";
-      }
+
+    <script type="module">
+      import { login, getCurrentUser } from "./assets/js/db.js";
+      import {
+        setLoaderVisibility,
+        setContentVisibility,
+      } from "./assets/js/utils.js";
+      (() => {
+        setLoaderVisibility(true);
+        getCurrentUser((user) => {
+          if (user) {
+            const uid = user.uid;
+            console.log(user);
+            location.href = "/new.html";
+          } else {
+            console.log("User is signed out");
+            setLoaderVisibility(false);
+            setContentVisibility(true);
+          }
+        });
+        document
+          .getElementById("btn-auth-google")
+          .addEventListener("click", (e) => {
+            setLoaderVisibility(true);
+            setContentVisibility(false);
+            login((error) => {
+              // Handle Errors here.
+              const errorCode = error.code;
+              const errorMessage = error.message;
+              // The email of the user's account used.
+              const email = error.customData.email;
+              console.error(errorCode, errorMessage, email);
+              setLoaderVisibility(false);
+              setContentVisibility(true);
+            });
+          });
+      })();
     </script>
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
